--- a/index.html
+++ b/index.html
@@ -5,23 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="javascript/signout.js"></script>
-	<!-- <style>
-		@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Heebo:wght@500&family=Inter:wght@400;500;600;700;800&family=Public+Sans:wght@600&family=Roboto:wght@400;900&display=swap');
-	</style> -->
-	<!-- <script>
-		tailwind.config = {
-// 		  theme: {
-// 			fontFamily:{
-// 				body: [font-family: 'Agbalumo', system-ui;
-// font-family: 'Heebo', sans-serif;
-// font-family: 'Inter', sans-serif;
-// font-family: 'Public Sans', sans-serif;
-// font-family: 'Roboto', sans-serif;]'
-		
-// 		  		}
-			} -->
-
 </head>
+
 <body>
 
 	<!-- Navigation Bar -->
@@ -53,9 +38,12 @@
 				  </button>
 				</div>
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-				  <div class="flex flex-shrink-0 items-center">
-					<img class="h-15 w-auto" src="images/origame_logo.png" alt="Your Company">
-				  </div>
+					<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+						<div class="flex flex-shrink-0 items-center">
+							<a href="index.html">
+								<img class="h-15 w-auto" src="images/origame_logo.png" alt="Your Company">
+							</a>
+						</div>
 				  <div class="hidden sm:ml-6 sm:block">
 					<div class="flex space-x-4">
 					  <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
@@ -119,47 +107,73 @@
 		  </nav>
 		  
 	</header>
-	
-	<br>
-	<br>
-	<div class="content">
 
 	<!-- Card Carousell -->
-	<div class="container">
-		<div class="text-center">
+	<div class="md:container md:mx-auto">
+		<div class="text-center pt-28">
+
 			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
-			<p class="mt-6 text-lg leading-8 text-gray-600">Unleah your magic with OrigaME!</p>
-			<div class="mt-10 flex items-center justify-center gap-x-6">
-			  <a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
-			   focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
-			  <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
+			
+			<p class="mt-6 text-lg leading-8 text-gray-600">Unleash your magic with OrigaME!</p>
+			
+			<div class="mt-10 flex items-center justify-center gap-x-6 py-10">
+				<a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
+				focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
+				<a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
 			</div>
-		  </div>
+			
+		<!-- </div>
+
 		<input type="radio" name="slider" id="item-1" checked>
 		<input type="radio" name="slider" id="item-2">
 		<input type="radio" name="slider" id="item-3">
-	  <div class="cards">
-		<label class="card" for="item-1" id="origami-crane">
-		  <img src="images/origami/crane.jpg" alt="crane">
-		</label>
-		<label class="card" for="item-2" id="origami-cat">
-		  <img src="images/origami/cat.jpg" alt="cat">
-		</label>
-		<label class="card" for="item-3" id="origami-tulip">
-		  <img src="images/origami/tulip.jpg" alt="tulip">
-		</label>
-	  </div>
-	</div>
-</div>
 
-<!-- Collect Badges -->
-<div class="container">
-	<div class="text-right">
-		<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges!</h1>
+		<div class="cards">
+
+			<label class="card" for="item-1" id="origami-crane">
+			<img src="images/origami/crane.jpg" alt="crane">
+			</label>
+
+			<label class="card" for="item-2" id="origami-cat">
+			<img src="images/origami/cat.jpg" alt="cat">
+			</label>
+
+			<label class="card" for="item-3" id="origami-tulip">
+			<img src="images/origami/tulip.jpg" alt="tulip">
+			</label>
+
+		</div> -->
+
 	</div>
 
-</div>
+
+	<!-- Collect Badges -->
+	<div class="class="md:container md:mx-auto">
+		<div class="text-center pt-28">
+			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges!</h1>
+			<div class="w-50 py-10">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon3.png">
+			</div>
+		</div>
+	</div>
+
+	<!-- Exchange Into Rewards -->
+	<div class="class="md:container md:mx-auto">
+		<div class="text-center pt-28">
+			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Exchange them into Rewards!</h1>
+			<div class="w-50 py-10">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon3.png">
+			</div>
+		</div>
+	</div>
+
+</body>
 	
+<!-- Footer -->
 <footer class="bg-white dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
@@ -245,6 +259,7 @@
     </div>
 </footer>
 
+
 	<script src="javascript/hamburger.js"></script>
 	<script src="javascript/carousel.js"></script>
 	<script>
@@ -264,6 +279,6 @@
 		}
 
 	</script>
-</body>
+
 </html>
 
