--- a/tutorial.html
+++ b/tutorial.html
@@ -131,7 +131,7 @@
 					</div>
 					
 					<!-- Tutorial Gallery -->
-					<div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-11 py-10">
+					<!-- <div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-11 py-10">
 						<a href="crane.html" class="bg-white bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-40 rounded-lg">
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/crane.jpg" alt="Crane Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Crane</h1>
@@ -183,7 +183,210 @@
 					</div>
 
 			</div>
-		</div>
+		</div> -->
+					<div class="bg-white">
+						<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+						<!-- <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2> -->
+					
+						<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/crane.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="crane.html">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Crane
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/bluebell flower.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Bluebell Flower
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/cat.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Cat
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/fox.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Fox
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/butterfly.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Butterfly
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/frog.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Frog
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/whale.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Whale
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/hat.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Hat
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/heart.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Heart
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/daylily.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Daylily
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/simpleflower.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Simple Flower
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/grass.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="#">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Grass
+										</a>
+									</h3>
+									</div>
+									<p class="text-sm font-medium text-gray-900">5 star</p>
+								</div>
+							</div>
+							<div>
+								<button>see more</button>
+							</div>
+
+					</div>
+  
 	</body>
 	
 
