--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 	  
 	<!-- Card Carousell -->
-	<div class="md:container md:mx-auto">
+	<!-- <div class="md:container md:mx-auto">
 		<div class="text-center pt-28">
 
 			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
@@ -172,7 +172,7 @@
 				<a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
 				focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
 				<a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
-			</div>
+			</div> -->
 			
 		<!-- </div>
 
@@ -196,7 +196,7 @@
 
 		</div> -->
 
-	</div>
+	<!-- </div> -->
 
 	<!-- Collect Badges -->
 	<div class="class="md:container md:mx-auto">
@@ -238,9 +238,25 @@
 			  <dt class="text-base leading-7 text-gray-600">Users globally!</dt>
 			  <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">5,000+</dd>
 			</div>
-		  </dl>
+		  	</dl>
 		</div>
-	  </div>
+	</div>
+
+	<div class="md:container md:mx-auto">
+		<div class="text-center pt-28">
+
+			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
+			
+			<p class="mt-6 text-lg leading-8 text-gray-600">Unleash your magic with OrigaME!</p>
+			
+			<div class="mt-10 flex items-center justify-center gap-x-6 py-10">
+				<a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
+				focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
+				<a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
+			</div>
+
+		</div>
+	</div>
 	  
 
 </body>
