--- a/crane_upload.html
+++ b/crane_upload.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="javascript/points.js"></script>
 </head>
 
 <body>
@@ -184,8 +185,8 @@
 			</svg>
 			Previous
 		</a>
-
-		<a href="tutorial.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+		
+		<a href="tutorial.html" id ="claim" name="claim" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
 			No Thanks
 		</a>
 
