--- a/crane_stepbystep.html
+++ b/crane_stepbystep.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Crane Origami</title>
-	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
 	<script src="https://cdn.tailwindcss.com"></script>
     <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
@@ -147,3 +147,139 @@
       </li>
     </ol>
   </nav>
+
+
+    <!-- Title -->
+    
+    <div class="crane-container">
+        <div class="text-left px-56">
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Get a piece of Origami paper.<br> This is the front of the paper. <br>
+                The crane will end up in this color.</h1>
+            <div id="popup" class="popup">
+              <br>
+              <h1>3D Model View</h1>
+                <iframe
+                  id="sketchfabIframe"
+                  src=""
+                  frameborder="0"
+                  allow="autoplay; fullscreen; vr"
+                  mozallowfullscreen="true"
+                  webkitallowfullscreen="true">
+                </iframe>
+                <button id="closeButton">Close</button>
+              </div>
+            
+            <img class="h-auto max-w-lg mx-auto rounded-lg" src="images/crane_tutorial/1.jpg" alt="Final product of Crane Origami">
+        </div>
+    </div>
+
+
+    <button id="openButton"> 3D </button>
+
+    <div class="container">
+
+        <a href="crane.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
+         rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+        <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+        </svg>
+        Previous
+        </a>
+        <!-- Next Button -->
+        <a href="crane_1.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
+         rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+        Next
+        <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+        </svg>
+        </a>
+
+    </div>
+
+</body>
+
+<!-- 3D Model Button -->
+<script>
+  document.getElementById('openButton').addEventListener('click', function() {
+    var popup = document.getElementById('popup');
+    var iframe = document.getElementById('sketchfabIframe');
+    iframe.src = 'https://sketchfab.com/models/976ea2f91d504e3cbbbab23aae7ee392/embed';
+    popup.style.display = 'block';
+  });
+
+  document.getElementById('closeButton').addEventListener('click', function() {
+    var popup = document.getElementById('popup');
+    var iframe = document.getElementById('sketchfabIframe');
+    iframe.src = '';
+    popup.style.display = 'none';
+  });
+</script>
+
+<!-- Footer -->
+<footer class="bg-indigo-900 dark:bg-gray-900">
+    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+        <div class="md:flex md:justify-between">
+          <div class="mb-6 md:mb-0">
+              <a href="https://flowbite.com/" class="flex items-center">
+                  <img src="images/bloopbloopstudio_logo.png" class="h-8 me-3" alt="BloopBloop Studios Logo" />
+                  <span class="self-center text-2xl font-semibold whitespace-nowrap text-indigo-50">BloopBloop Studios</span>
+              </a>
+          </div>
+          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">About</h2>
+                  <ul class="text-gray-300 dark:text-gray-400 font-medium">
+                      <li class="mb-4">
+                          <a href="about.html" class="hover:underline">About Us</a>
+                      </li>
+                      <li>
+                          <a href="contact.html" class="hover:underline">Contact Us</a>
+                      </li>
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">Install OrigaME!</h2>
+                  <ul class="text-gray-300 dark:text-gray-30 font-medium">
+                      <li class="mb-4">
+                          <a href="#" class="hover:underline ">Apple Store</a>
+                      </li>
+                      <li>
+                          <a href="#" class="hover:underline">GooglePlay Store</a>
+                      </li>
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase text-indigo-50">Legal</h2>
+                  <ul class="text-gray-300 dark:text-gray-400 font-medium">
+                      <li class="mb-4">
+                          <a href="#" class="hover:underline">Privacy Policy</a>
+                      </li>
+                      <li>
+                          <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-gray-300 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
+          </span>
+          <div class="flex mt-4 sm:justify-center sm:mt-0">
+              <a href="#" class="text-gray-300 hover:text-gray-900 dark:hover:text-white">
+                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
+                        <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/>
+                    </svg>
+                  <span class="sr-only">Facebook page</span>
+              </a>
+              <a href="#" class="text-gray-300 hover:text-gray-900 dark:hover:text-white ms-5">
+                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 17">
+                    <path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z" clip-rule="evenodd"/>
+                </svg>
+                  <span class="sr-only">Twitter page</span>
+              </a>
+          </div>
+      </div>
+    </div>
+</footer>
+</html>
